--- a/src/pages/FormLayoutNominee/Styling.css
+++ b/src/pages/FormLayoutNominee/Styling.css
@@ -1,10 +1,10 @@
 .btn-primary {
   color: #fff;
-  font-size: 1.1rem;
-  font-weight: 600;
-  margin-left: 88%;
-  margin-top: -2%;
-  width: 12%;
+  font-size: 1.1rem !important;
+  font-weight: 500 !important;
+  margin-left: 88% !important;
+  margin-top: -4% !important;
+  width: 12% !important;
   background-color: #0070ad !important;
   border-color: #0d6efd;
 }
