--- a/src/pages/Admin/Filter/FilterStyling.css
+++ b/src/pages/Admin/Filter/FilterStyling.css
@@ -5,4 +5,15 @@
   color: #fff !important;
   background-color: #007ad0 !important;
   border-color: #007ad0 !important;
+  position: absolute !important;
+  left: 5% !important;
+  width: 20% !important;
+  top: 110% !important;
 }
+/* 
+.date1 {
+  margin-left: -100px !important;
+}
+.date2 {
+  margin-left: -100px !important;
+} */
