Completed Page Admin page

--- a/src/pages/Admin/Filter/FilterStyling.css
+++ b/src/pages/Admin/Filter/FilterStyling.css
@@ -10,6 +10,15 @@
   width: 20% !important;
   top: 110% !important;
 }
+.btn-dark {
+  color: #fff !important;
+  background-color: #007ad0 !important;
+  border-color: #007ad0 !important;
+  position: absolute !important;
+  left: 5% !important;
+  width: 20% !important;
+  top: 145% !important;
+}
 /* 
 .date1 {
   margin-left: -100px !important;
